@startuml test


note top of RepairManual: Each repair manual has its metadata about the \n manufacturer and etc
note top of TaskStep: TaskStep can potentially contain everything \n Task contains, so will be using same classes

enum MessageType{
    Note
    Notice
    Warning
    Info
}

class Message{
    MessageType Type
    String Text
}


class CarInfo{
   String Manufacturer
   String Model
   String Year
   String VinCode
}

class CarOwnerInfo{
   String FirsName
   String LastName
   String MobileNumber
}

class Job {
    int Id
    CarInfo CarInfo
    CarOwnerInfo OwnerInfo
    String Title
    Image[] InitialPhotos
    Task[] Tasks
    String OriginalDocUrl 
    DateTime CreatedOn
    String CreatedBy
}


class Task {
    String Title
    Int SequenceNumber
    Message[] Messages
    RepairManual[] RepairManuals
    TaskStep[] Steps
    Decimal Paint
    Decimal Labor
    String PartNumber
    Decimal Quantity
    Int TaskStatus
    TaskResult Result
}

enum TaskStatus{
    ToDo
    InProgress
    Completed
}

class TaskStep{
    String Title
    Int SequenceNumber
    Message[] Messages
    Decimal Paint
    Decimal Labor
    String PartNumber
    Decimal Quantity
    Int TaskStatus
}

class TaskResult{
    TaskResultImage[] Images
}

class TaskResultImage{
    String Id
    String Label
    DateTime TakenOn
}

class RepairManual{
    String Category
    String DocUrl
}





CarInfo -- Job
CarOwnerInfo -- Job
Task "1" *-- "multi" RepairManual
Job "1" -- "many" Task
Task -- Message 
Message -- MessageType 
Task --|> TaskStep
' BaseProcedure --|> GeneralProcedure
' RemovalAndInstallation --- ProcedureStep




@enduml